Fixed s3 sizing bug on mobile and tablets

--- a/css/global.css
+++ b/css/global.css
@@ -788,7 +788,7 @@ img {
 
     .contentVideoS3 {
 
-        width: 50%;
+        width: 100%;
     }
 
     /***** index *****/
@@ -856,7 +856,7 @@ img {
 
     .contentVideoS3 {
 
-        width: 50%;
+        width: 100%;
     }
 
     /***** adjust image sizes *****/
